--- a/WebhookTemplate/WebhookTemplate.WebApp.csproj
+++ b/WebhookTemplate/WebhookTemplate.WebApp.csproj
@@ -47,4 +47,8 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
   </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\WebhookTemplate.Common\WebhookTemplate.Common.csproj" />
+    </ItemGroup>
 </Project>
