New Azure function added

--- a/WebhookTemplate/appsettings.json
+++ b/WebhookTemplate/appsettings.json
@@ -11,6 +11,6 @@
   "Profisee": {
     "LoggingFilePath": "",
     "LoggingConnectionString": "",
-    "ServiceUrl":""
+    "ServiceUrl": "https://corpltr11.corp.profisee.com/Profisee/"
   }
 }
