--- a/WebhookTemplate.AzureFunction/local.settings.json
+++ b/WebhookTemplate.AzureFunction/local.settings.json
@@ -5,6 +5,7 @@
     "FUNCTIONS_WORKER_RUNTIME": "dotnet",
     "LoggingFilePath": "",
     "LoggingConnectionString": "",
-    "ServiceUrl": "https://corpltr24.corp.profisee.com/Profisee/"
-  },
+    "ServiceUrl": "",
+    "WEBSITE_RUN_FROM_PACKAGE": "0"
+  }
 }
