--- a/WebhookTemplateActivityLibrary/WebhookTemplateActivityLibrary.csproj
+++ b/WebhookTemplateActivityLibrary/WebhookTemplateActivityLibrary.csproj
@@ -33,6 +33,9 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="netstandard" />
+    <Reference Include="Profisee.Platform.Utilities.Security">
+      <HintPath>..\..\..\..\Program Files\Profisee\Profisee SDK\23.2.0 R1\Workflows\PackageInstallerVS2022\Profisee.Platform.Utilities.Security.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -45,6 +48,10 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security.Principal.Windows, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\Program Files\Profisee\Profisee SDK\23.2.0 R1\Workflows\PackageInstallerVS2022\System.Security.Principal.Windows.dll</HintPath>
+    </Reference>
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.ServiceModel.Activities" />
     <Reference Include="System.Workflow.Activities" />
@@ -53,22 +60,22 @@
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="Profisee.Platform.Workflow.Contracts">
-      <HintPath>$(registry:HKEY_CURRENT_USER\Software\Microsoft\MaestroSoftwareDevelopersKit@install_location)Workflows\PackageInstaller\Profisee.Platform.Workflow.Contracts.dll</HintPath>
+      <HintPath>..\..\..\..\Program Files\Profisee\Profisee SDK\23.2.0 R1\Workflows\PackageInstallerVS2022\Profisee.Platform.Workflow.Contracts.dll</HintPath>
     </Reference>
     <Reference Include="Profisee.Platform.Workflow.Activities">
-      <HintPath>$(registry:HKEY_CURRENT_USER\Software\Microsoft\MaestroSoftwareDevelopersKit@install_location)Workflows\PackageInstaller\Profisee.Platform.Workflow.Activities.dll</HintPath>
+      <HintPath>..\..\..\..\Program Files\Profisee\Profisee SDK\23.2.0 R1\Workflows\PackageInstallerVS2022\Profisee.Platform.Workflow.Activities.dll</HintPath>
     </Reference>
     <Reference Include="Profisee.Platform.Workflow.Common">
-      <HintPath>$(registry:HKEY_CURRENT_USER\Software\Microsoft\MaestroSoftwareDevelopersKit@install_location)Workflows\PackageInstaller\Profisee.Platform.Workflow.Common.dll</HintPath>
+      <HintPath>..\..\..\..\Program Files\Profisee\Profisee SDK\23.2.0 R1\Workflows\PackageInstallerVS2022\Profisee.Platform.Workflow.Common.dll</HintPath>
     </Reference>
     <Reference Include="Profisee.Platform.CoreData.Contracts">
-      <HintPath>$(registry:HKEY_CURRENT_USER\Software\Microsoft\MaestroSoftwareDevelopersKit@install_location)Workflows\PackageInstaller\Profisee.Platform.CoreData.Contracts.dll</HintPath>
+      <HintPath>..\..\..\..\Program Files\Profisee\Profisee SDK\23.2.0 R1\Workflows\PackageInstallerVS2022\Profisee.Platform.CoreData.Contracts.dll</HintPath>
     </Reference>
     <Reference Include="Profisee.Platform.Services.AddressVerification.Contracts">
-      <HintPath>$(registry:HKEY_CURRENT_USER\Software\Microsoft\MaestroSoftwareDevelopersKit@install_location)Workflows\PackageInstaller\Profisee.Platform.Services.AddressVerification.Contracts.dll</HintPath>
+      <HintPath>..\..\..\..\Program Files\Profisee\Profisee SDK\23.2.0 R1\Workflows\PackageInstallerVS2022\Profisee.Platform.Services.AddressVerification.Contracts.dll</HintPath>
     </Reference>
     <Reference Include="Profisee.Platform.Services.Matching.Contracts">
-      <HintPath>$(registry:HKEY_CURRENT_USER\Software\Microsoft\MaestroSoftwareDevelopersKit@install_location)Workflows\PackageInstaller\Profisee.Platform.Services.Matching.Contracts.dll</HintPath>
+      <HintPath>..\..\..\..\Program Files\Profisee\Profisee SDK\23.2.0 R1\Workflows\PackageInstallerVS2022\Profisee.Platform.Services.Matching.Contracts.dll</HintPath>
     </Reference>
     <Reference Include="WindowsBase" />
   </ItemGroup>
