--- a/WebhookTemplate.AzureFunction/Properties/serviceDependencies.Story128376FunctionApp - Zip Deploy.json
+++ b/WebhookTemplate.AzureFunction/Properties/serviceDependencies.Story128376FunctionApp - Zip Deploy.json
@@ -3,7 +3,8 @@
     "storage1": {
       "resourceId": "/subscriptions/[parameters('subscriptionId')]/resourceGroups/[parameters('resourceGroupName')]/providers/Microsoft.Storage/storageAccounts/story128376logicappb38d",
       "type": "storage.azure",
-      "connectionId": "AzureWebJobsStorage"
+      "connectionId": "AzureWebJobsStorage",
+      "dynamicId": null
     },
     "appInsights1": {
       "resourceId": "/subscriptions/[parameters('subscriptionId')]/resourceGroups/[parameters('resourceGroupName')]/providers/microsoft.insights/components/Story128376FunctionApp",
