Cleanup from previous changes
- Removed unnecessary common project
- Duplicated functionality across azure function and web app project as much as possible
- Abstract a lot of azure function code that was profisee rest and auth related into classes that mirror the web app project
- Made request and response payload classes consistent across both web app and azure function projects

--- a/WebhookTemplate.AzureFunction/WebhookTemplate.AzureFunction.csproj
+++ b/WebhookTemplate.AzureFunction/WebhookTemplate.AzureFunction.csproj
@@ -16,13 +16,11 @@
     <PackageReference Include="Azure.Storage.Files.Shares" Version="12.1.0" />
     <PackageReference Include="Azure.Storage.Queues" Version="12.11.1" />
     <PackageReference Include="IdentityModel" Version="6.1.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.6" />
     <PackageReference Include="Microsoft.Azure.Functions.Extensions" Version="1.1.0" />
     <PackageReference Include="Microsoft.Extensions.Azure" Version="1.5.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="4.2.0" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\WebhookTemplate.Common\WebhookTemplate.Common.csproj" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
