--- a/WebhookTemplate.AzureFunction/local.settings.json
+++ b/WebhookTemplate.AzureFunction/local.settings.json
@@ -5,7 +5,7 @@
     "FUNCTIONS_WORKER_RUNTIME": "dotnet",
     "LoggingFilePath": "",
     "LoggingConnectionString": "",
-    "ServiceUrl": "",
+    "ServiceUrl": "https://corpltr24.corp.profisee.com/Profisee/",
     "WEBSITE_RUN_FROM_PACKAGE": "0"
   }
 }
